--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.50.1",
     "@uploadthing/react": "^6.7.2",
+    "axios": "^1.7.7",
+    "firebase": "^10.13.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies-next": "^4.3.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.31.4",
     "drizzle-zod": "^0.5.1",
